# personalized-tourism-system

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
api/: api-definition.yaml
backend/: CMakeLists.txt
backend/include/graph/: dijkstra.h  graph.h
backend/src/: main.cpp
backend/src/graph/: dijkstra.cpp  graph.cpp
backend/tests/: test_dijkstra.cpp  test_graph.cpp
database/: functions.sql  schema-consistency-check.md  schema-fixed.sql  schema.sql
docs/: api.md  database-er-diagram.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/store/: user.js
frontend/src/views/: Diary.vue  Home.vue  Recommendation.vue  RoutePlan.vue
scripts/: generate_test_data.py
